syntax = "proto3";

package mozaic.protocol;

message ConnectionRequest {
    bytes token = 1;
}

message ConnectionResponse {
    oneof response {
        ConnectionSuccess success = 1;
        ConnectionError error = 2;
    }
}

message ConnectionSuccess {
    uint64 client_id = 1;
}

message ConnectionError {
    string message = 1;
}


message Packet {
    message Message {
        bytes data = 1;
    }

    message CloseConnection {
        // for future use
    }

    oneof payload {
        Message message = 1;
        CloseConnection close_connection = 2;
    }
}

// TODO: this naming might be really stupid.
message Message {
    message Message {
        uint64 message_id = 1;
        bytes data = 2;
    }
    
    message Response {
        uint64 message_id = 1;
        bytes data = 2;
    }

    oneof payload {
        Message message = 1;
        Response response = 2;
    }
}

message LobbyMessage {
    message AddPlayerRequest {
        bytes token = 1;
    }

    message AddPlayerResponse {
        uint64 client_id = 1;
    }

    message RemovePlayerRequest {
        uint64 client_id = 1;
    }

    message RemovePlayerResponse {
        // placeholder
    }

    message StartGameRequest {
        bytes payload = 1;
    }

    message StartGameResponse {
        // placeholder
    }

    oneof payload {
        AddPlayerRequest add_player = 1;
        RemovePlayerRequest remove_player = 2;
        StartGameRequest start_game = 3;
    }
}